# base-contract-watchdog

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/contract_watchdog/: __init__.py  api.py  classifier.py  schemas.py  storage.py  watcher.py
backend/src/contract_watchdog/detectors/: __init__.py  admin_detector.py  permission_detector.py  upgrade_detector.py
backend/tests/: conftest.py  test_api.py  test_classifier.py  test_detectors.py  test_watcher.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/contracts/[address]/: page.tsx
frontend/app/events/: page.tsx
frontend/app/events/[id]/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: EventTable.tsx  EventTimeline.tsx  Footer.tsx  Header.tsx  LiveFeed.tsx  SeverityBadge.tsx  StatsChart.tsx
frontend/lib/: api.ts
